--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,17 +4,28 @@
   border-bottom: 1px solid $gray-line;
   padding: 40px 0;
 
+
   .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media (max-width: 700px) {
+      flex-direction: column-reverse;
+    }
+  }
+  &__cart{
+    @media (max-width: 700px) {
+      padding-bottom: 20px;
+    }
   }
 
   &__logo {
     display: flex;
 
+
     img {
       margin-right: 15px;
+
     }
 
     h1 {
